welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:3: error: type mismatch;
 found   : String("a")
 required: Int
		return "a"
                       ^close10:6: error: type mismatch;
 found   : String("b")
 required: Int
		return "b"
                       ^close10:9: error: type mismatch;
 found   : String("0")
 required: Int
		return "0"
                       ^